--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@capacitor/android": "^4.6.1",
+    "@capacitor/app": "^4.1.1",
+    "@capacitor/camera": "^4.1.4",
+    "@capacitor/cli": "^4.6.1",
+    "@capacitor/core": "^4.6.1",
     "@coddicat/vue-pinch-scroll-zoom": "^3.3.4",
     "compressorjs": "^1.1.1",
     "core-js": "^3.6.5",
